--- a/app/go2me/templates/home.html
+++ b/app/go2me/templates/home.html
@@ -46,7 +46,7 @@ function Loaded()
 	else
 		Go2.DOM.SetFocusIfVisible(txtLink);
 		
-	//Go2.DisplayBars(200);
+	Go2.DisplayBars(200);
 }
 
 function Shorten()
@@ -188,11 +188,10 @@ using this form:</p>
 <div style="clear:both;padding-top:15px;">
 <h2>Recently popular links ({{total_pages|intcomma}} links shared to date)</h2>
 <table class="scores">
-<tr><th></th><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th>Created</th><th>Score</th></tr>
+<tr><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th>Created</th><th>Score</th></tr>
 {% for page in pages %}
 	{% if page.ModelExists %}
 	<tr>
-		<td style="width:18px;"><span style="display:none;" class="ssu Snap_Shot_URL">{{page.model.url|escape}}</span></td>
 		<td class="title"><div>
 			<a href="/{{page.model.GetId}}" title="{{page.model.url|escape}}">{{page.model.title|escape}}</a>
 		</div></td>
@@ -207,8 +206,11 @@ using this form:</p>
 			{% endif %}
 			{{page.model.dateCreated|Age}}
 		</td>
-		<td class="bar-td"><div class="bar" bar_value="{{page.ScoreNow|mult:24|floatformat:1}}"
-			title="{{page.ScoreNow|mult:24|floatformat:1}} points Today">&nbsp;</div></td>
+		<td class="bar-td"><div class="bar-holder">
+			<div class="bar" bar_value="{{page.ScoreNow|mult:24|floatformat:1}}"
+				 title="{{page.ScoreNow|mult:24|floatformat:1}} points Today">&nbsp;
+			 </div>
+		</div></td>
 	</tr>
 	{% endif %}
 {% endfor %}
