--- a/trunk/app/go2me/templates/tag.html
+++ b/trunk/app/go2me/templates/tag.html
@@ -40,6 +40,7 @@ function KeyDown(evt)
 	{% if page.ModelExists %}
 	<tr>
 		<td class="title"><div>
+			<img class="favicon" src="http://{{page.model.Domain}}/favicon.ico">
 			<a href="/{{page.model.GetId}}" title="{{page.model.url|escape}}">{{page.model.title|escape}}</a>
 		</div></td>
 		<td class="num">{{page.model.shareCount|intcomma}}</td>
