--- a/app/go2me/templates/home.html
+++ b/app/go2me/templates/home.html
@@ -184,7 +184,7 @@ using this form:</p>
 	</div>
 </div>
 
-{% cache 180 home %}
+{% cache 180 home-11 %}
 <div style="clear:both;padding-top:15px;">
 <h2>Recently popular links ({{total_pages|intcomma}} links shared to date)</h2>
 <table class="scores">
