checkpoint - expanders working (from flight)

--- a/app/go2me/templates/mapped.html
+++ b/app/go2me/templates/mapped.html
@@ -68,7 +68,7 @@ function Loaded()
 	Go2.AddEventFn(frmContent, "load", OnNavigate);
 	
 	OnResize();
-
+	Go2.InitPanels();
 	Go2.AddEventFn(window, "resize", OnResize);
 }
 
