--- a/trunk/app/go2me/templates/mapped.html
+++ b/trunk/app/go2me/templates/mapped.html
@@ -226,7 +226,7 @@ Go2.AddEventFn(window, "click", Click)
 					<img src="/images/facebook.png">
 				</a>
 				<a target="_blank"
-				   href="http://twitter.com/home?source={{twitter_source}}&status={{map.TweetText|urlencode}}"
+				   href="http://twitter.com/home?source={{twitter_source}}&status={{map.TweetText}}"
 				   title="Share Link on Twitter">
 					<img src="/images/twitter-logo.png">
 				</a>
