--- a/app/go2me/templates/pages.html
+++ b/app/go2me/templates/pages.html
@@ -24,23 +24,37 @@ function KeyDown(evt)
 
 {% block body %}
 <div class="page">
-<div class="heading">
-{% if username %}
-	Welcome <a href="/user/{{username}}" title="{{username}}'s activity">{{username}}</a>
-	{% if profile %}
-		(<a href="/profile" title="{{username}}'s profile">Profile</a>)
+
+{% block header %}
+<div class="head">
+	<div class="signin">
+	{% if username %}
+		Welcome <a href="/user/{{username}}" title="{{username}}'s activity">{{username}}</a>
+		{% if profile %}
+			(<a href="/profile/" title="{{username}}'s profile">Profile</a>)
+		{% else %}
+			(<a href="/profile/" title="Your nickname is temporary until you create a (free) account.">Create Account</a>)
+		{% endif %} |
+		<a href="#" onclick="Go2.SetUsername('');return false;">Sign out</a>
 	{% else %}
-		(<a href="/profile" title="Your nickname is temporary until you create a (free) account.">Create Account</a>)
-	{% endif %} |
-	<a href="#" onclick="Go2.SetUsername('');return false;">Sign out</a>
-{% else %}
-	<div id="sign-in">
-	    <label for="username">Nickname: </label>
-	    <input maxlength="20" style="width:70px;" type="text" id="username" name="username"/>
-		<input onclick="Go2.SetUsername(txtUsername.value);" style="width:70px;" type="button" value="Set It"/>
+		<div id="sign-in">
+		    <label for="username">Nickname: </label>
+		    <input maxlength="20" style="width:70px;" type="text" id="username" name="username"/>
+			<input onclick="Go2.SetUsername(txtUsername.value);" style="width:70px;" type="button" value="Set It"/>
+		</div>
+	{% endif %}
 	</div>
-{% endif %}
+
+	<a target="_top" href="/"><img title="{{site_name}}" class="logo" src="/images/logo.png"></a>
+
+	<div class="page-heading">
+
+		<h1>{% block page-heading %}{{site_title}}{% endblock %}</h1>
+		<p class="subhead">{% block page-subheading %}{{site_tagline}}{% endblock %}</p>
+	</div>
 </div>
+
+{% endblock %}
 
 {% block pagebody %}
 {% endblock %}
@@ -57,7 +71,7 @@ function KeyDown(evt)
 <a href="http://code.google.com/p/g02me/wiki/API">Developers</a> |
 <a href="http://getsatisfaction.com/g02me/products/g02me_g02me">Feedback</a> |
 <a href="http://code.google.com/p/g02me/wiki/TermsOfService">Terms of Service</a> |
-<a href="http://twitter.com/go2me">Twitter</a>
+<a href="http://twitter.com/go2me">Follow {{site_name}} on Twitter</a>
 </div>
 
 <div style="text-align:center;padding-top:20px;">
