--- a/app/go2me/templates/profile.html
+++ b/app/go2me/templates/profile.html
@@ -46,7 +46,7 @@ window.onclick = Click;
 <p class="error">{{message}}.</p>
 {% endif %}
 
-<form enctype="multipart/form-data" action="/profile" method="POST">
+<form enctype="multipart/form-data" action="/profile/" method="POST">
 <input type="hidden" name="csrf" value="{{csrf}}"/>
 <table class="form">
 	<tr>
