--- a/app/go2me/templates/master.html
+++ b/app/go2me/templates/master.html
@@ -11,14 +11,22 @@
 
 <script src="/scripts/g02me.js"></script>
 <script src="http://www.google.com/jsapi"></script>
-
 <script src="http://partner.googleadservices.com/gampad/google_service.js"></script>
 <script type="text/javascript">
-google.load("jquery", "1.2.6");
-GS_googleAddAdSenseService("{{ad_publisher_id}}");
-GS_googleEnableAllServices();
+try
+	{
+	google.load("jquery", "1.2.6");
+	GS_googleAddAdSenseService("{{ad_publisher_id}}");
+	GS_googleEnableAllServices();
+	}
+catch (e)
+	{
+	// Handle offline case OR google AJAX service down
+	document.write('<' + 'script src="/scripts/jquery.js"></' + 'script>');
+	}
 </script>
 
+<script src="/scripts/jquery.js"></script>
 <script>
 {% block script %}
 Go2.SetCSRF("{{csrf}}");
@@ -42,13 +50,17 @@ var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "htt
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
-var pageTracker = _gat._getTracker("{{analytics_code}}");
-pageTracker._addIgnoredOrganic("{{site_host}}")
-{% ifnotequal user_type 'base' %}pageTracker._setVar({{user_type}}){% endifnotequal %}
-pageTracker._trackPageview();
-{% for event in GA_Events %}
-	pageTracker._trackPageview("/meta/{{event}}");
-{% endfor %}
+try
+	{
+	var pageTracker = _gat._getTracker("{{analytics_code}}");
+	pageTracker._addIgnoredOrganic("{{site_host}}")
+	{% ifnotequal user_type 'base' %}pageTracker._setVar({{user_type}}){% endifnotequal %}
+	pageTracker._trackPageview();
+	{% for event in GA_Events %}
+		pageTracker._trackPageview("/meta/{{event}}");
+	{% endfor %}
+	}
+catch (e) {}
 </script>
 {% endblock %}
 
